# config-driven-design

./: README.md  pyproject.toml
configs/: config.yaml
configs/agent/: thomson_sampling.yaml  ucb.yaml
configs/environment/: matching_pennies.yaml  prisoners_dilemma.yaml
scripts/: main.py
src/config_driven_design/: config.py  run.py
src/config_driven_design/agents/: config.py  factory.py  interface.py  thomson_sampling.py  ucb.py
src/config_driven_design/environments/: config.py  factory.py  interface.py  two_player_game.py
